<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:backgroundTint="@color/yaziRenk1"
        android:fontFamily="sans-serif-light"
        android:text="@string/addButton"
        android:textColor="@color/anaRenk"
        android:textColorLink="@color/anaRenk"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintStart_toEndOf="@+id/chip3"
        app:layout_constraintTop_toBottomOf="@+id/button3"
        app:rippleColor="@color/anaRenk" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:backgroundTint="@color/yaziRenk1"
        android:fontFamily="sans-serif-light"
        android:text="@string/addButton"
        android:textColor="@color/anaRenk"
        android:textColorLink="@color/anaRenk"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintStart_toEndOf="@+id/chip4"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        app:rippleColor="@color/anaRenk" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:backgroundTint="@color/yaziRenk1"
        android:fontFamily="sans-serif-light"
        android:text="@string/addButton"
        android:textColor="@color/anaRenk"
        android:textColorLink="@color/anaRenk"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintStart_toEndOf="@+id/chip2"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:rippleColor="@color/anaRenk" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="150dp"
        android:text="@string/fiyat4"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chip3" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="32dp"
        android:text="@string/fiyat3"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/chip3"
        app:layout_constraintEnd_toStartOf="@+id/button3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chip4" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="32dp"
        android:text="@string/fiyat2"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/chip4"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chip2" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chip2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/almendra_sc"
        android:text="@string/aroma2"
        android:textColor="@color/yaziRenk1"
        android:textColorLink="@color/yaziRenk1"
        android:textSize="16sp"
        android:textStyle="bold"
        app:chipBackgroundColor="@color/anaRenk"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chip3"
        android:layout_width="96dp"
        android:layout_height="47dp"
        android:layout_marginStart="16dp"
        android:text="@string/aroma3"
        android:textColor="@color/yaziRenk1"
        android:textColorLink="@color/yaziRenk1"
        android:textSize="16sp"
        android:textStyle="bold"
        app:chipBackgroundColor="@color/anaRenk"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chip4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/almendra_sc"
        android:text="@string/aroma4"
        android:textColor="@color/yaziRenk1"
        android:textColorLink="@color/yaziRenk1"
        android:textSize="16sp"
        android:textStyle="bold"
        app:chipBackgroundColor="@color/anaRenk"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/anaRenk"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/almendra_bold_italic"
            android:text="@string/app_name"
            android:textColor="@color/yaziRenk1"
            android:textSize="30sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="130dp"
            tools:layout_editor_absoluteY="14dp" />

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/alfa_slab_one"
        android:text="@string/coffee_name"
        android:textColor="@color/anaRenk"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="185dp"
        android:layout_height="182dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/appealshot___vanilla_latte_25jan_png" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chip"
        android:layout_width="100dp"
        android:layout_height="53dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/almendra_sc"
        android:text="@string/aroma1"
        android:textAlignment="center"
        android:textColor="@color/yaziRenk1"
        android:textColorLink="@color/yaziRenk1"
        android:textSize="16sp"
        android:textStyle="bold"
        app:chipBackgroundColor="@color/anaRenk"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="32dp"
        android:text="@string/fiyat1"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/chip2"
        app:layout_constraintEnd_toStartOf="@+id/button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chip" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:backgroundTint="@color/yaziRenk1"
        android:fontFamily="sans-serif-light"
        android:text="@string/addButton"
        android:textColor="@color/anaRenk"
        android:textColorLink="@color/anaRenk"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintStart_toEndOf="@+id/chip"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:rippleColor="@color/anaRenk" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="56dp"
        android:backgroundTint="@color/anaRenk"
        android:text="@string/button"
        android:textColor="@color/yaziRenk1"
        android:textColorLink="@color/yaziRenk1"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:rippleColor="@color/yaziRenk1" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="131dp"
        android:layout_height="53dp"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="13dp"
        android:layout_marginBottom="56dp"
        android:text="@string/coffee_fiyat"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="51dp"
        android:fontFamily="casual"
        android:text="@string/sure"
        android:textColor="@color/yaziRenk1"
        android:textColorLink="@color/yaziRenk2"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/alfa_slab_one"
        android:text="@string/hazirlik"
        android:textColor="@color/yaziRenk2"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/alfa_slab_one"
        android:text="@string/mesaj"
        android:textAlignment="center"
        android:textColor="@color/yaziRenk2"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

</androidx.constraintlayout.widget.ConstraintLayout>